--- a/DemoTickit/Views/Ticket/Index.cshtml
+++ b/DemoTickit/Views/Ticket/Index.cshtml
@@ -23,12 +23,11 @@
 <div id="Message"></div>
 <div id="divSuccess"></div>
 <div class="form-group">
-    @Html.LabelFor(model => model.BuyerName, new { @class = "from-control" })
+    <label>Buyer Name</label>
     @Html.TextBoxFor(model => model.BuyerName, new { @class = "from-control",@required=""})
     @Html.HiddenFor(model => model.Event.EventId)
     @Html.HiddenFor(model => model.Event.TimeoutInSeconds)
-    <br />
-    <input type="submit" id="btnSubmit" class="btn btn-primary" value="submit" />
+    <input type="submit" style="margin-left:10px" id="btnSubmit" class="btn btn-primary" value="Buy" />
 </div>
 <script>
     var x;
